--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "postcss": "^8.5.6",
     "prettier-plugin-tailwindcss": "^0.7.1",
     "react": "19.2.0",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.65.0",
