--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "lucide-react": "^0.454.0",
     "mini-css-extract-plugin": "^2.9.4",
     "next": "16.0.0",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.6",
     "prettier-plugin-tailwindcss": "^0.7.1",
